# Massive-Parallel-Real-time-Template-based-Deformable-Surface-Reconstruction-on-the-GPU

./: CMakeLists.txt  README.md  build.sh  docker
app/: CMakeLists.txt
app/Phantom5/: config.yaml  hamlyn_f5.cc
app/Phantom7/: config.yaml  hamlyn_f7.cc
app/colon_1/: config.yaml  main.cc
app/colon_2/: config.yaml  main.cc
app/colon_3/: config.yaml  main.cc
app/p_sft_S1_real/: config.yaml  real.cc
app/p_sft_S2_real/: config.yaml  real.cc
app/p_sft_S3_real/: config.yaml  real.cc
app/p_sft_S4_real/: config.yaml  real.cc
app/p_sft_S5_real/: config.yaml  real.cc
app/p_sft_S6_real/: config.yaml  real.cc
app/p_sft_S7_real/: config.yaml  real.cc
app/p_sft_S8_real/: config.yaml  real.cc
app/p_sft_S9_real/: config.yaml  real.cc
cmake/modules/: FindMetis.cmake  FindSuiteSparse.cmake
src/modules/: CMakeLists.txt  MeshMap.cc  MeshMap.h  System.cc  System.h  Tracking.cc  Tracking.h
src/modules/GT_compare/: ColonGT.cc  GroundTruth_compare.cc  HamlynGT.cc  HamlynGT.h  SfTGT.cc  SfTGT.h
src/modules/data/: Extractor.cc  Extractor.h  database.cc  database.h
src/modules/optimize/: CMakeLists.txt  OptimizerDistanceOnly.h  OptimizerWithoutMiddlePoint.h  gauss_newton.cu  gauss_newton.cuh  optGPU.cu  optGPU.cuh
src/util/: utils.h
src/viewer/: CMakeLists.txt  MeshDrawer.cc  Viewer.cc  Viewer.h
test/: CMakeLists.txt  main.cu  main.cuh  optim.cu  optim.cuh  optim_kernelStreams.cu  optim_kernelStreams.cuh
